# pycli-apps

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  combined.txt  mypy.ini  notes.txt  notes2.txt  pyproject.toml
src/apps/authenticator/: main.py
src/apps/calculator/: main.py
src/apps/download/: main.py
src/apps/greetings/: main.py
src/apps/notebook/: main.py
src/apps/notes/: main.py
tests/: test_apps.py
tests/calculator/: test_calculator.py
