[tool.poetry]
name = "apps"
version = "0.1.0"
description = "Command line apps built using Python's Click and Typer"
authors = ["Amitesh Kumar <amiteshrai@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/amiteshrai/pycli-apps"
repository = "https://github.com/amiteshrai/pycli-apps"
keywords = ["python", "cli", "click", "typer"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
mypy = "^0.971"
typer = { extras = ["all"], version = "^0.6.1" }
arrow = "^1.2.2"
requests = "^2.28.1"
requests-cache = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
flake8 = "^5.0.2"
black = "^22.6.0"
radon = "^5.1.0"
coverage = "^6.4.2"
pytest-cov = "^3.0.0"
safety = "^2.1.1"
pre-commit = "^2.20.0"
flake8-pytest-style = "^1.6.0"
nitpick = "^0.32.0"
isort = "^5.10.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".venv/*"]

[tool.poetry.scripts]
greet = "src.apps.greetings.main:hello"
add = "src.apps.calculator.main:add"
subtract = "src.apps.calculator.main:subtract"
auth = "src.apps.authenticator.main:auth_options"
auth_again = "src.apps.authenticator.main:auth_prompt"
